--- a/public/css/vehicules_ajouter.css
+++ b/public/css/vehicules_ajouter.css
@@ -1,6 +1,6 @@
 /* public/css/vehicules_ajouter.css */
 /*
-  Plan (mise en forme de la page Ajouter un véhicule) :
+  A fAIRE (mise en forme de la page Ajouter un véhicule) :
 
   1) Zone centrale
      - garder le fond sombre (global.css)
